--- a/src/Fit.Frig.Web/Views/Shared/_Layout.cshtml
+++ b/src/Fit.Frig.Web/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Frig" asp-action="Index">Frig</a></li>
+                    <li><a asp-area="" asp-controller="Food" asp-action="Index">Food</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
