--- a/src/Fit.Frig.Web/Views/Food/Index.cshtml
+++ b/src/Fit.Frig.Web/Views/Food/Index.cshtml
@@ -1,27 +1,26 @@
-﻿@model Fit.Frig.Web.Data.Models.Food
+﻿@using System.Collections.Generic
+@model IEnumerable<Fit.Frig.Web.Data.Models.Food>
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Food Index Page";
 }
 
 <div class="row">
     <div>Food</div>
-
-
-
-    <div>Add food</div>
-    <form asp-action="Add" asp-controller="Food" method="post" id="addfoodform" class="navbar-right">
-        <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+    <div>
+        <a asp-action="Add" asp-controller="Food">Add</a>
+    </div>
+    <ul>
+    @foreach (var food in Model)
+    {
+        <li class="food-item">
+            <div>@food.Name</div>
+            <div>                
+                <a asp-action="Details" asp-controller="Food" asp-route-id="@food.Id">Details</a>
+                <a asp-action="Edit" asp-controller="Food" asp-route-id="@food.Id">Edit</a>
+                <a asp-action="Delete" asp-controller="Food" asp-route-id="@food.Id">Delete</a>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </form>
+        </li>
+    }
+    </ul>
 </div>
